security-group.tf
resource "aws_security_group" "rds_sg" {
    vpc_id = "${aws_vpc.db_vpc.id}"
    name = "allow-rds"
    description = "allow rds"
    ingress {
      from_port   = 8080
      to_port     = 8090
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
    description      = "allow port 22"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]

  }
}
